# RoomReverb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  README.md
.github/: FUNDING.yml
Assets/: CMakeLists.txt
Assets/Presets/: EchoChamber.xml  LargeRoom.xml  LargeRoomBright.xml  LargeRoomDark.xml  LargeRoomDrum.xml  LargeRoomTiled.xml  LargeRoomVocal.xml  LargeRoomWooden.xml  Live.xml  LongReverb12s.xml  LongReverb30s.xml  MediumRoom.xml  MediumRoomBright.xml  MediumRoomDark.xml  MediumRoomDrum.xml  MediumRoomTiled.xml  MediumRoomVocal.xml  MediumRoomWooden.xml  Shimmer.xml  SmallRoom.xml  SmallRoomBright.xml  SmallRoomDark.xml  SmallRoomDrum.xml  SmallRoomTiled.xml  SmallRoomVocal.xml  SmallRoomWooden.xml  Tunnel.xml  VeryLargeRoom.xml  VeryLargeRoomBright.xml  VeryLargeRoomDark.xml  VeryLargeRoomDrum.xml  VeryLargeRoomTiled.xml  VeryLargeRoomVocal.xml  VeryLargeRoomWooden.xml
Freeverb3/: AUTHORS  fv3_config.h
Freeverb3/freeverb/: allpass.cpp  allpass_t.hpp  biquad.hpp  comb.cpp  delay.cpp  fv3_type_float.h  progenitor.hpp  progenitor2.cpp  progenitor_t.hpp  revbase.hpp  revbase_t.hpp  slot.hpp
Libs/Freeverb3/: CMakeLists.txt
Libs/Freeverb3/freeverb/: allpass.hpp  comb.hpp  comb_t.hpp  delay.hpp  delay_t.hpp  delayline.cpp  delayline.hpp  delayline_t.hpp  earlyref.cpp  earlyref.hpp  earlyref_t.hpp  efilter.hpp  progenitor.cpp  progenitor2.hpp  progenitor2_t.hpp  revbase.cpp  slot.cpp  slot_t.hpp  utils.cpp  utils.hpp
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  ProcessorABStateManager.cpp  ProcessorABStateManager.h  RoomReverb.cpp  RoomReverb.h
Source/Components/: ABToggleComponent.cpp  ABToggleComponent.h  AboutDialog.cpp  AboutDialog.h  DonationSelector.cpp  DonationSelector.h  EarlySection.cpp  EarlySection.h  HeaderSection.cpp  HeaderSection.h  InfoButtonComponent.cpp  InfoButtonComponent.h  LateSection.cpp  LateSection.h  LogoComponent.cpp  LogoComponent.h  Main.cpp  Main.h  OutputSection.cpp  OutputSection.h  PresetComponent.cpp  PresetComponent.h  SliderComponent.cpp  SliderComponent.h  UndoComponent.cpp  UndoComponent.h
Source/LookAndFeel/: CustomLookAndFeel.cpp  CustomLookAndFeel.h
